--- a/loanbank/templates/app/update.html
+++ b/loanbank/templates/app/update.html
@@ -35,6 +35,11 @@
                     </div>
 
                     <div class="mb-3">
+                        <label for="email" class="form-label">{{form.email.label}}</label>
+                        {{form.email}}
+                    </div>
+
+                    <div class="mb-3">
                         <label for="amount" class="form-label">{{form.amount.label}}</label>
                         {{form.amount}}
                     </div>
