changed the read file

--- a/loanbank/templates/includes/footer.html
+++ b/loanbank/templates/includes/footer.html
@@ -2,12 +2,21 @@
     <div class="bg-accent mt-5">
       <div class="container">
         <div class="row">
-          <div class="col-sm-6 text-lg-left text-center">
+          <div class="col-4 text-lg-left text-center">
             <h4>
-              Reach out to hire loans
+              Get Loans
             </h4>
           </div>
-
+          <div class="col-4 text-lg-left text-center">
+            <h4>
+              With Low Interest
+            </h4>
+          </div>
+          <div class="col-4 text-lg-left text-center">
+            <h4>
+              Safety Returns 
+            </h4>
+          </div>
           <!-- <div class="col-sm-6 text-lg-right text-center">
             <button class="btn btn-light">
               Contact Us
