--- a/loanbank/templates/web/home.html
+++ b/loanbank/templates/web/home.html
@@ -5,16 +5,15 @@
 {% block content %}
 <main class="home">
   <div class="top" data-slick='{"slidesToShow": 1, "slidesToScroll": 1}'>
-    <div class="top-banner">
-      <img src="{% static './assets/images/bg-banner.png' %}" alt="" class="img-fluid w-100">
+    <div class="top-banner" style="background-color:#e56237; height:30vh">
+      <!-- <img src="{% static './assets/images/bg-banner.png' %}" alt="" class="img-fluid w-100"> -->
       <div class="top-container d-flex flex-column pl-5">
         <h1>
-          For Loans 
+          Get Your Loans 
         </h1>
         <p>
-          Hire a lender and let them do the need for you
+         Find a lender and let them do the need for you
         </p>
-        
       </div>
     </div>
    
@@ -38,13 +37,10 @@
   </section> -->
   <section class="container mt-5 mb-5">
     <div class="row mt-5">
-      <div class="col-md-4">
-        <img src="https://placeimg.com/640/480/any" alt="" class="img-fluid">
-      </div>
-      <div class="col-md-8 animate__animated animate__fadeInRight">
+      <div class="col-md-8 offset-2 animate__animated animate__fadeInRight">
         <h2 class="text-center">About C2CLOANBANK</h2>
         <p>We created this website to provide loan to customers.In this users can ask or give personal loans to other users of the application.The users can either accept or decline the loan request of the users.The users can get loan in easy way compared to banks which has lot of procedures.We assure your datas will be safer.
-          our website is reliable
+          Our website is reliable and we do complete background check of users using cibil score.
         </p>
       </div>
     </div>
