--- a/loanbank/templates/app/read.html
+++ b/loanbank/templates/app/read.html
@@ -20,7 +20,7 @@
             <div class="col-md-12 mt-4" style="border:1px solid #80808029; padding:15px;">
                 
                 <h4 class="text-center mb-3">LOAN RECORD</h4>
-
+               
                 <table class="table">
                     <thead>
                         <tr>
@@ -50,7 +50,7 @@
                             <td>
                                 <a class="btn btn-success" href="mailto:{{data.email}}?subject=Loan%20Acceptance%20Email">LEND</a>
                                 <a class="btn btn-warning" href="{% url 'update' data.id %}">MODIFY</a>
-                                <a class="btn btn-danger"  href="mailto:someone@example.com?subject=Loan%20Acceptance%20Email" href="{% url 'delete' data.id %}" onclick="returnconfirm('Are you sure?')">DECLINE</a>
+                                <a class="btn btn-danger"  href="{% url 'delete' data.id %}" onclick="returnconfirm('Are you sure?')">DECLINE</a>
                             </td>
                         </tr>
                         {% endfor %}
